--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/polyfill-php56": "^1.10"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8"
+        "phpunit/phpunit": "^8",
+        "rector/rector": "^0.6.7"
     },
     "autoload": {
         "psr-4": {
