--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: php
 dist: xenial
 php:
+    - 7.0
+    - 7.1
+    - 7.2
     - 7.3
     - 7.4
 
 before_script:
+    - if (( "$TRAVIS_PHP_VERSION" >= "7.4"* )); then export COMPOSER="./composer-7-4.json"; fi
     - composer install
 
-script: phpunit --verbose
+script: php ./vendor/bin/phpunit --verbose
